--- a/thesisfrontmatter.sty
+++ b/thesisfrontmatter.sty
@@ -159,16 +159,16 @@
     \begin{flushleft}
         \renewcommand{\baselinestretch}{1.0}
         \fontsize{12}{24}\selectfont
-        \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
-        \hspace*{4cm} \@advisor, \kindcap ~Advisor \hfill Date \\
-        \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
-        \hspace*{4cm} Coordinator \letters ~Degree Program \hfill Date \\
-        \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
-        \hspace*{4cm} \@memberA \hfill Date \\
-        \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
-        \hspace*{4cm} \@memberB \hfill Date\\
-        \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
-        \hspace*{4cm} \@memberC \hfill Date\\
+        \hspace*{3cm} \rule[-2.5ex]{11cm}{0.5pt} \\
+        \hspace*{3cm} \@advisor, \kindcap ~Advisor \hfill Date~~~~~~~~\\
+        \hspace*{3cm} \rule[-2.5ex]{11cm}{0.5pt} \\
+        \hspace*{3cm} Coordinator \letters ~Degree Program \hfill Date~~~~~~~~\\
+        \hspace*{3cm} \rule[-2.5ex]{11cm}{0.5pt} \\
+        \hspace*{3cm} \@memberA, Committee Member \hfill Date~~~~~~~~\\
+        \hspace*{3cm} \rule[-2.5ex]{11cm}{0.5pt} \\
+        \hspace*{3cm} \@memberB, Committee Member \hfill Date~~~~~~~~\\
+        \hspace*{3cm} \rule[-2.5ex]{11cm}{0.5pt} \\
+        \hspace*{3cm} \@memberC, Committee Member \hfill Date~~~~~~~~\\
 %JC        \hspace*{4cm} \rule[-2.5ex]{10.4cm}{0.5pt} \\
 %JC        \hspace*{4cm} \@memberD \\        
     \end{flushleft}
