Adding figures from OC education

--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -788,9 +788,42 @@ The HydroLight physical model has the following characteristics:
 \section{SeaDAS}
 
 % ----------------------------------------------------
-\section{ACOLITE}
+\section{ACOLITE}\todo{complete this section}
 
-\todo{complete this section}
+% ----------------------------------------------------
+\section{Problems in the remote sensing of Case 2 waters}
+
+\begin{figure}[htb]
+\centering
+      \includegraphics[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_CDOMfixed}
+      \caption{.\label{fig:CDOMfixed} } 
+\end{figure}
+
+\begin{figure}[htb]
+\centering
+      \includegraphics[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_TSSfixed}
+      \caption{.\label{fig:TSSfixed} } 
+\end{figure}
+
+\begin{figure}[htb]
+  \begin{minipage}[c]{0.48\linewidth}
+    \centering
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_CHLfixedlow.png}
+    \end{minipage}
+      % \caption{.\label{fig:OCedu_CHLfixedlow} } 
+   \hfill   
+   \begin{minipage}[c]{0.48\linewidth}
+    \centering
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_CHLfixedmed.png}
+  \end{minipage}    
+      % \caption{.\label{fig:OCedu_CHLfixedmed} } 
+  \begin{minipage}[c]{1.0\linewidth}
+    \centering
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_CHLfixedhigh.png}
+  \end{minipage}    
+      \caption{.\label{fig:OCedu_CHLfixed} }
+\end{figure}
+
 % \section{State of the Research}
 
 % As shown in \cite{GeraceThesis}
