Modified to show letter instead of numbers in section titles

--- a/Appendix.tex
+++ b/Appendix.tex
@@ -1,10 +1,15 @@
 % !TEX root=Thesis_PhD.tex 
-% the previous is to reference main .bib
+% the previous is to reference main.bib
 %% CHAPTER
 \appendix
 \chapter*{Appendix}
 \addcontentsline{toc}{chapter}{Appendix}
+\renewcommand{\thesection}{\Alph{section}}
+
 \section{Lab Measurements}
+
+blah, blah, blah
+
 \section{Field Measurements}
 \section{Landsat-8 Sensor Characteristics}
 \section{HydroLight Specification}
