3 figures added from OC education in Matlab

--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -566,6 +566,8 @@ where $K_d(z,\lambda)$ is the {\it spectral diffuse attenuation coefficient} for
 It is important to note that AOPs are not additive as the IOPs. Also, AOPs can not be measured in the lab or on a water sample, therefore they must be measured in situ.
 
 % ------------------------------------------
+\subsection{AOP and IOP Relationship}
+% ------------------------------------------
 \subsection{Standard Algorithms (NASA)}
 \subsubsection{$C_a$}
 \subsubsection{$TSS$}
@@ -791,7 +793,7 @@ The HydroLight physical model has the following characteristics:
 \section{ACOLITE}\todo{complete this section}
 
 % ----------------------------------------------------
-\section{Problems in the remote sensing of Case 2 waters}
+\section{Challenges in the remote sensing of Case 2 waters}
 
 \begin{figure}[htb]
 \centering
@@ -822,6 +824,24 @@ The HydroLight physical model has the following characteristics:
       \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/OCedu_CHLfixedhigh.png}
   \end{minipage}    
       \caption{.\label{fig:OCedu_CHLfixed} }
+\end{figure}
+
+\begin{figure}[htb]
+\centering
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/ChlStandardFixed.png}
+      \caption{.\label{fig:ChlStandardFixed} } 
+\end{figure}
+
+\begin{figure}[htb]
+\centering
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/ChlStandardNoFixed.png}
+      \caption{.\label{fig:ChlStandardNoFixed} } 
+\end{figure}
+
+\begin{figure}[htb]
+\centering
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPHD/Images/SmallConcImpact.png}
+      \caption{.\label{fig:SmallConcImpact} } 
 \end{figure}
 
 % \section{State of the Research}
