Abstract done. 300 words...

--- a/Results.tex
+++ b/Results.tex
@@ -46,7 +46,7 @@ Water samples are collected for each site in dark Nalgene bottles. Additionally,
   \centering
   \includegraphics[width=13cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/Collect1314.png}
   \label{tab:collect}
-\end{table}
+\end{table}\todo{update table}
 
 % ------------------------------
 \section{Laboratory Measurements}
