Added the objectives of a Introduction from Chris Macks paper

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -4,6 +4,13 @@
 \chapter{Introduction}
 \label{ch:introduction} 
 \pagenumbering{arabic} 
+% What? and So what? What is the paper about, and why should the reader care?
+% Topic, observation/discovery, explanation
+% What research questions is this paper trying to answer?
+
+% - Establish a territory (what is the field of the work, why is this field important, what has already been done?)
+% - Establish a niche (indicate a gap, raise a question, or challenge prior work in this territory)
+% - Occupy that niche (outline the purpose and announce the present research; optionally summarize the results).
 
 Ocean color studies at a global scale, such as chlorophyll-{\it a} level trends in oceans, can be performed by the heritage Ocean Color satellites (e.g. SeaWiFS, MODIS). These satellites satisfied the spatial requirement for these kinds of studies. However, when the region of interests include coastal or inland waters, which could be considered Case 2 water, their spatial resolution of roughly a thousand meters are not enough to resolve smaller water bodies. These kinds of waters are important for us, because it is these kinds of waters that we have the most interaction with, like for drinking or recreation. 
 
