--- a/Introduction.tex
+++ b/Introduction.tex
@@ -28,12 +28,15 @@ The Landsat project has been monitoring the earth for over four decades, being t
 The retrieval of water components is in general performed in the reflectance domain, so the very first step in this work is to perform a high quality atmospheric correction to the radiance image from Landsat 8. This is a complex task to perform over water because the signal leaving the water that reaches the sensor is very small when compared to the signal reaching the sensor produced by atmospheric scattering. Most of the atmospheric correction algorithms for open oceans (Case 2 waters) are based on the methods developed for ocean color satellites by \cite{Gordon:1994}. These methods are based on the fact that the signal leaving the water does not contribute to the overall signal beyond the near infrared (NIR) part of the spectrum; so the signal reaching the sensor is caused only by atmospheric scattering (\cite{Gordon:1994}) in those wavelengths. This is known as the {\it black pixel assumption}. This concept can be expanded to the short wave infrared (SWIR) bands when the black pixel assumption is not valid in the NIR bands, which is the case for Case 2 and highly productive Case 1 waters (\cite{Wang:2007}). Unfortunately, most of these methods are not suitable for highly turbid coastal water, although different modifications to these algorithms have been suggested (\cite{Patt2003}).
 
 % Atmospheric Correction developed in this work
-In this work, a different approach for atmospheric correction was developed based on \cite{Raqueno:2003}, \cite{Gerace:2013} and \cite{Pahlevan:2012}. This atmospheric correction algorithm is the model-based empirical line method (MoB-ELM) that uses a combination of an in-water radiative transfer model over water and a Landsat reflectance product to determine the bright and dark pixels in the image \cite{Concha2014SPIE,Concha2015_SPIE}. The MoB-ELM is compared with the standard algorithms based on \cite{Gordon:1994} and with in-situ measurements.
+In this work, a different approach for atmospheric correction was developed based on \cite{Raqueno:2003}, \cite{Gerace:2013} and \cite{Pahlevan:2012}. This atmospheric correction algorithm is the model-based empirical line method (MoB-ELM) that uses a combination of an in-water radiative transfer model over water and a Landsat reflectance product to determine the bright and dark pixels in the image \cite{Concha2014SPIE,Concha2015_SPIE}. The MoB-ELM is compared with the standard algorithms based on \cite{Gordon:1994} and with {\it in situ} measurements.
 
+% Retrieval: What it has be done
+After having atmospherically corrected the image, the next step is to apply a retrieval algorithm that outputs maps of coloring producing agent (CPA) (chlorophyll-{\it a}, sediments and colored dissolved organic matter (CDOM)) concentrations. The standard algorithms for CPA retrieval used by the heritage ocean color missions do not retrieve the CPAs simultaneously. An example of these algorithms is the OC3 (Ocean Chlorophyll 3-band) algorithm for retrieving chlorophyll-{\it a} concentrations \cite{OReilly2000}. This is an empirical algorithm that finds the best fit for a function between a ratio of two bands and a {\it in situ} chlorophyll-{\it a} concentration data set.
 
+% Retrieval: What we are proposing
+\cite{Gerace:2013} developed an algorithm for the retrieval of CPAs based on a look-up-table (LUT) inversion using simulated Landsat 8 imagery. In this work, we extend Gerace's approach to real Landsat 8 imagery \cite{Concha2013IGARSS}. The retrieval algorithm uses a combination of least square error minimization algorithm and a non-linear optimization routine to find the best match for a specific reflectance signal in a LUT of spectral water-leaving reflectance curves. The LUT is created using HydroLight 5, an in-water radiative transfer model (\cite{Mobley:2005}). Each curve in the LUT has a specific set of water component concentrations. This is performed on a pixel-by-pixel basis. 
 
-% Retrieval
-After having atmospherically corrected the image, the next step is to apply a retrieval algorithm that outputs maps of coloring producing agent (CPA) (chlorophyll-{\it a}, sediments and colored dissolved organic matter (CDOM)) concentrations. A spectral matching and look-up table (LUT) approach is utilized based on \cite{Gerace:2012}, (\cite{Concha2013IGARSS}). It uses a least square error minimization algorithm to find the best match for a specific reflectance signal in a LUT of spectral water-leaving reflectance curves. The LUT is created using HydroLight 5, an in-water radiative transfer model (\cite{Mobley:2005}). Each curve in the LUT has a specific set of water component concentrations. This is performed on a pixel-by-pixel basis. The concentration values obtained from the retrieval algorithm are validated by comparison with concentration measured in the lab from water bodies present in the Landsat 8 image. Also, the retrieval are compared with the NASA's standard algorithms \cite{OReilly2000,Hu:2012fv}.
+In order to have outputs that are representative of the water bodies that are being studied, Inherent Optical Properties (IOPs) of those specific waters have to be input to the HydroLight model. To accomplish this, collections of water samples were conducted at the same time that the Landsat 8 satellite passed over the area of study (the Rochester Embayment, Rochester, NY). After collection, these water samples were analyzed in the lab to obtain IOPs for the CPAs. Furthermore, apparent optical properties (AOPs), specifically remote-sensing reflectances, and backscattering measurements were also collected for further comparison and to pursue closure between HydroLight AOPs results and {\it in situ} AOPs measurements.
 
 % Data Collection and Lab Measurements
-In order to have outputs that are representative of the water bodies that are being studied, Inherent Optical Properties (IOPs) of those specific waters have to be input to the HydroLight model. To accomplish this, collections of water samples were conducted at the same time that the Landsat 8 satellite passed over the area of study (the Rochester Embayment, Rochester, NY). After collection, these water samples were analyzed in the lab to obtain IOPs for the main water constituents. Furthermore, apparent optical properties (AOPs) and backscattering measurements were also collected for further comparison and to pursue closure between HydroLight AOPs results and in-situ AOPs measurements.
+The concentration of CPAs obtained from the retrieval algorithm are validated by comparison with concentration measured in the lab from {\it in situ} water samples collected from water bodies present in the Landsat 8 image. Also, the chlorophyll-{\it a} retrieval is compared with the NASA's standard algorithms \cite{OReilly2000,Hu:2012fv}.
